--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -24,4 +24,4 @@ $icon-text-dark-theme: #ABABAB;
 $icon-text-light-theme: #535353;
 
 $shadow-dark-theme: 1px 1px 17px -7px rgba(21, 21, 21, 1);
-$shadow-light-theme: 1px 1px 17px -7px rgba(67, 67, 67, 1);
+$shadow-light-theme: 1px 1px 17px -7px rgb(112, 112, 112);
