skills section: tech stack with icons added

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,7 +3,7 @@ $primary-dark-theme: #2D2D2D;
 $primary-light-theme: #E4E4E4;
 
 $background-gradient-dark-theme: linear-gradient(180deg, #2D2D2D 0%, #323232 100%);
-$background-gradient-light-theme: linear-gradient(180deg, #E4E4E4 0%, #efefef 100%);
+$background-gradient-light-theme: linear-gradient(180deg, #E4E4E4 0%, #eeeeee 100%);
 
 $gradient-red-dark-theme: linear-gradient(66deg, #C20E0E 0%, #E04B1C 100%);
 $gradient-red-light-theme: linear-gradient(66deg, #CA0D0D 0%, #F55F30 100%);
@@ -18,7 +18,7 @@ $text-secondary-dark-theme: #929292;
 $text-secondary-light-theme: #828282;
 
 $icon-bg-dark-theme: #424242;
-$icon-bg-light-theme: #E2E2E2;
+$icon-bg-light-theme: #f7f7f7;
 
 $icon-text-dark-theme: #ABABAB;
 $icon-text-light-theme: #535353;
