--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -2,7 +2,7 @@
 
 .skills {
     width: 100%;
-    padding: 4.5rem 8vw;
+    padding: 4.5rem 8vw 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -127,7 +127,7 @@
 
 @media screen and (min-width: 1150px) {
     .skills {
-        padding: 4.5rem 2vw !important;
+        padding: 4.5rem 2vw 6.5rem !important;
 
         .content-wrap {
             display: grid;
