--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -8,7 +8,7 @@
 
     .content-wrap {
         display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fit,minmax(290px, 1fr));
         gap: 5rem;
     }
 
@@ -168,13 +168,15 @@
     }
 }
 
+@media screen and (min-width: 768px) {
+    img {
+        width: 55% !important;
+    }
+}
+
 @media screen and (min-width: 1220px) {
     .home {
         padding: 13rem 14vw;
-    }
-
-    img {
-        width: 55% !important;
     }
 
     h1 {
