--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -92,6 +92,10 @@
         .description {
             margin-bottom: 12px;
         }
+
+        .ul-label {
+            margin-bottom: 5px;
+        }
         
         ul {
            margin-left: 20px; 
