--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -15,7 +15,7 @@
     .header-container {
         display: flex;
         flex-direction: column;
-        align-items: left;
+        align-items: center;
         justify-content: center;
     }
 
@@ -30,12 +30,16 @@
     h1 {
         font-weight: 500;
         font-size: 32px;
-        margin-bottom: 1rem;
         white-space: nowrap;
     }
 
+    .name {
+        margin-bottom: 1rem;
+    }
+
     .h-span {
-        font-size: 40px;
+        font-size: 38px;
+        white-space: nowrap;
     }
 
     p {
@@ -171,6 +175,12 @@
 @media screen and (min-width: 768px) {
     img {
         width: 55% !important;
+    }
+}
+
+@media screen and (min-width: 847px) {
+    .header-container {
+        align-items: flex-start !important;
     }
 }
 
