--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -29,8 +29,12 @@
         gap: 2rem;
         margin-bottom: 8rem;
 
-        .col {
-            flex: 1;
+        .col1 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex: 2;
+            width: 100%;
 
             img {
                 width: 100% !important;
@@ -38,15 +42,8 @@
             }
         }
 
-        .col1 {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex: 2;
-            width: 100%;
-        }
-
         .col2 {
+            flex: 1;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -108,6 +105,7 @@
 
         .cta-buttons {
             margin-top: 1rem;
+            white-space: nowrap;
         }
 
         .cta-page, .cta-code {
