--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -64,6 +64,8 @@
                 border-radius: 6px;
                 font-family: 'Poppins', sans-serif;
                 font-size: 14px;
+                -webkit-appearance: none;
+                appearance: none;
             }
 
             input:nth-last-child(2) {
