link text decoration disabled

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -125,6 +125,7 @@
 
             .contact-text {
                 font-family: 'Roboto Mono', monospace;
+                text-decoration: none;
             }
         }
     }
